fix: overflow horizontal de .logoVert no componente Footer

--- a/src/views/components/footer/Footer.module.css
+++ b/src/views/components/footer/Footer.module.css
@@ -1,42 +1,47 @@
-@media (max-width: 430px) {
-  footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-    height: 16.25rem;
-    padding: 2rem;
-  }
+	max-height: 16.25rem;
+	padding: 2rem;
+}
 
-  .contentFooter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 
-  .logoVert {
-    width: 8.7rem;
-    margin-bottom: 1.5rem;
-  }
+.logo-vert {
+	height: 64px;
+	margin-bottom: 1.5rem;
+}
 
-  .linkActions {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
+.actions {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5rem;
 
-    font-size: var(--size-sm);
-  }
+	font-size: var(--size-sm);
+}
 
-  #light {
-    background: var(--color-neutral-100);
-    color: var(--color-neutral-600);
-  }
+#light {
+	background: var(--color-neutral-100);
+	color: var(--color-neutral-600);
+}
 
-  #dark {
-    background: var(--color-neutral-800);
-    color: var(--color-neutral-300);
-  }
+#dark {
+	background: var(--color-neutral-800);
+	color: var(--color-neutral-300);
+}
+
+@media (width > 830px) {
+	.actions {
+		flex-direction: row;
+		gap: 2rem;
+	}
 }
